discussion/kv_engine/176433/176433_rev13_discussion.txt
======================================================================================================================
DESCRIPTION:

MB-35297: Make RangeScan config duration and buffering dynamic

Add "set" paths for changing the runtime value of:

* range_scan_read_buffer_send_size

This value is read from the config when a new scan is created, existing
scans do not pick-up the change.

* range_scan_max_lifetime

This value is push through by a change-listener to the range scan code.
New values take affect when the timeout task is scheduled.

These are deliberately not documented in cbepctl

Note: this patch includes an unrelated range_scan_create.md fix to
avoid CV on a standalone doc patch.

Change-Id: I578ba6dd35fe6859667468473a53159445d9e167

======================================================================================================================
COMMENTS
======================================================================================================================
Author: Jim Walker
Date: 2022-08-31 13:38:08.000000000
Message: 
Uploaded patch set 13.
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2022-08-31 13:58:54.000000000
Message: 
Patch Set 13: Verified-1 Code-Review-1

Build Failed 

http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/19885/ : FAILURE

clang-tidy found the following problems:

<pre>
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/range_scans/range_scan_owner.cc:178:1: error: version control conflict marker in file [clang-diagnostic-error]
<<<<<<< HEAD
^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/range_scans/range_scan_owner.cc:186:47: error: use of undeclared identifier "maxScanDuration" [clang-diagnostic-error]
                                taskable, vb, maxScanDuration));
                                              ^

</pre> ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/19885/ )

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/range_scans/range_scan_owner.cc:178:1:
error: version control conflict marker in file [clang-diagnostic-error]
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/19885/ )

http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/48819/ : FAILURE

Compile error at C:/Jenkins/workspace/kv_engine-windows-master/kv_engine/engines/ep/src/range_scans/range_scan_owner.cc(202): error C2059: syntax error: ")" ( http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/48819/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/41044/ : FAILURE

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_analyzer-master/kv_engine/engines/ep/src/range_scans/range_scan_owner.cc:178:1:
error: version control conflict marker in file
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/41044/ )

http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/21839/ : FAILURE

Compile error at [2022-08-31T13:57:43.082Z] /home/couchbase/jenkins/workspace/kv_engine.linux-CE_master/kv_engine/engines/ep/src/range_scans/range_scan_owner.cc:178:1:
error: version control conflict marker in file
 ( http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/21839/ )

http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/22931/ : FAILURE

Compile error at [2022-08-31T13:55:59.738Z] /home/couchbase/jenkins/workspace/kv_engine.threadsanitizer_master/kv_engine/engines/ep/src/range_scans/range_scan_owner.cc:178:1:
error: version control conflict marker in file
 ( http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/22931/ )

http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/30220/ : FAILURE

Compile error at [2022-08-31T13:56:11.869Z] /home/couchbase/jenkins/workspace/kv_engine.ASan-UBSan_master/kv_engine/engines/ep/src/range_scans/range_scan_owner.cc:178:1:
error: version control conflict marker in file
 ( http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/30220/ )

http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/21132/ : FAILURE

Compile error at [2022-08-31T13:54:01.443Z] /Users/couchbase/workspace/workspace/kv_engine.macos_master/kv_engine/engines/ep/src/range_scans/range_scan_owner.cc:178:1:
error: version control conflict marker in file
 ( http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/21132/ )

http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/22191/ : FAILURE

Compile error at [2022-08-31T13:55:15.458Z] /home/couchbase/jenkins/workspace/kv_engine.linux_master/kv_engine/engines/ep/src/range_scans/range_scan_owner.cc:178:1:
error: version control conflict marker in file
 ( http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/22191/ )

http://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/master/9680/ : FAILURE

Compile error at [2022-08-31T13:43:49.566Z] /home/couchbase/jenkins/workspace/kv_engine.aarch64-linux_master/kv_engine/engines/ep/src/range_scans/range_scan_owner.cc:178:1:
error: version control conflict marker in file
 ( http://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/master/9680/ )

http://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/master/9581/ : FAILURE

Compile error at [2022-08-31T13:53:33.911Z] /home/couchbase/jenkins/workspace/kv_engine.libFuzzer_master/kv_engine/engines/ep/src/range_scans/range_scan_owner.cc:178:1:
error: version control conflict marker in file
 ( http://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/master/9581/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/19106/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
